...
    <!--app:layout_constraintHorizontal_bias="0.0"-->
    <!--app:layout_constraintStart_toEndOf="@+id/start_time_label"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/start_time_picker" />-->


    <Button
        android:id="@+id/add_journey_submit_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onSubmit"
...
